fix spacing professors

--- a/src/components/ProfessorInfoCard/stylesheet.scss
+++ b/src/components/ProfessorInfoCard/stylesheet.scss
@@ -3,6 +3,9 @@
 .ProfessorInfo {
   padding: 20px;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
   @include dark(background, $theme-dark-card-background);
   @include light(background, $theme-light-card-background);
@@ -24,11 +27,11 @@
     .section-row .section-content {
       display: grid;
       grid-template-columns:
-        40px /* action */
+        45px /* action */
         1fr /* CRN */
-        0.4fr /* Sect */
-        0.6fr /* Day */
-        1.5fr /* Time */
+        0.5fr /* Sect */
+        0.8fr /* Day */
+        2fr /* Time */
         1fr /* Seats Filled */
         1fr /* Waitlist */
         2fr; /* Location */
@@ -50,13 +53,14 @@
     }
 
     .sections-header {
-      font-size: 0.875em;
-      padding: 12px 16px;
+      font-size: 0.75em;
+      padding: 8px;
       border-bottom: 1px solid $color-border;
+      color: $table-header;
     }
 
     .section-row .section-content {
-      padding: 12px 16px;
+      padding: 8px;
       border-bottom: 1px solid $color-border;
 
       &:last-child {
@@ -66,7 +70,7 @@
 
     .row-cell {
       font-size: 0.875em;
-      padding: 4px 8px;
+      padding: 8px;
       display: flex;
       align-items: center;
 
